--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">FinalTask</string>
+    <string name="app_name">Guide Rick And Morty</string>
 </resources>
